--- a/views/index.pug
+++ b/views/index.pug
@@ -14,3 +14,5 @@ block content
     li #[strong Copies available:] !{book_instance_available_count}
     li #[strong Authors:] !{author_count}
     li #[strong Genres:] !{genre_count}
+    
+  p Adding a small change here to see what happens https://github.com/alexhayward4321/mdn-express-locallibrary-tutorial
