⛲️⚾️ Checkpoint ./views/index.pug:66335166/69

--- a/views/index.pug
+++ b/views/index.pug
@@ -15,4 +15,4 @@ block content
     li #[strong Authors:] !{author_count}
     li #[strong Genres:] !{genre_count}
     
-  p Adding a small change here to see what happens https://github.com/alexhayward4321/mdn-express-locallibrary-tutorial
+  p Adding a small change here to see what happens
